Bug/asoc 57930 fix tether out of bounds issue (#3035)
* remove global tether styles outside of comp lib

* add max height and overflow auto to tether styles in comp lib

--- a/component-lib/app/styles/component-lib/base/content/_content-tethered-panel.scss
+++ b/component-lib/app/styles/component-lib/base/content/_content-tethered-panel.scss
@@ -8,6 +8,8 @@
 }
 
 .panel-content {
+  max-height: 20rem;
+  overflow: auto;
   background: background-color(primary, darkest);
   color: text-color(primary, lightest);
   text-align: left;
