--- a/investigate-events/app/styles/investigate-events/components/_investigate-query-container.scss
+++ b/investigate-events/app/styles/investigate-events/components/_investigate-query-container.scss
@@ -240,9 +240,3 @@
   }
 
 }
-.ember-tether {
-  .panel-content {
-    max-height: 30rem;
-    overflow-y: scroll;
-  }
-}
