--- a/investigate-process-analysis/app/styles/investigate-process-analysis/_process-analysis-container.scss
+++ b/investigate-process-analysis/app/styles/investigate-process-analysis/_process-analysis-container.scss
@@ -77,12 +77,6 @@
   }
 }
 
-
-.ember-tether .panel-content {
-  max-height: 30rem;
-  overflow: unset;
-}
-
 .property-container {
   .rsa-content-accordion h3 {
     color: text-color(secondary, light);
